--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "cd backend && npm run dev",
     "client": "cd frontend && npm run dev",
     "build": "cd frontend && npm run build",
-    "vercel-build": "cd frontend && npm run build",
+    "vercel-build": "npm --prefix frontend ci && npm --prefix frontend run build",
     "install-all": "npm install && cd backend && npm install && cd ../frontend && npm install"
   },
   "devDependencies": {
